deploy/kubernetes/manifests/01-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: bist-batch
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/part-of: bist-mini
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres
  selector:
    app.kubernetes.io/name: postgres
